--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         }
         .text{
             background-color: transparent;
+            font-size: 25px ;
         }
         .container p{
             background-color: transparent;
@@ -52,15 +53,31 @@
         }
         /* samll Devices */
         @media screen and (max-width: 600px)  {
-
+            .img{
+           height: 40px;
+    }
         }
         /* Normal Devices */
         @media screen and (min-width: 601px) and (max-width: 768px) {
-
+            .card-container{
+              font-size: 16px;
+            }
+            .img{
+            background-color: rgb(228, 166, 166);
+    }
+    .card-container{
+                width: 400px;
+             }
         }
         /* tablet Devices */
         @media screen and (min-width: 769px) and (max-width: 992px) {
-
+            .card-container{
+              font-size: 20px;
+            }
+            .img{
+            background-color: rgb(239, 194, 194);
+    }
+           
         }
         /* Large Devices */
         @media screen and (min-width: 993px) and (max-width: 1200px) {
